survey-salesforce/salesforce-app/src/objects/Device__c.object
<CustomObject>
    <fields>
        <fullName>App_version__c</fullName>
        <label>App version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <externalId>true</externalId>
        <label>IMEI</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastCheckInBy__c</fullName>
        <label>Last Check In By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastCheckInDate__c</fullName>
        <label>Last Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Check_in_By_Name__c</fullName>
        <formula>LastCheckInBy__r.FirstName + &apos; &apos; + LastCheckInBy__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>Active_Devices</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>IMEI__c</columns>
        <columns>Model__c</columns>
        <columns>OS__c</columns>
        <columns>App_version__c</columns>
        <columns>LastCheckInDate__c</columns>
        <columns>Last_Check_in_By_Name__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Devices</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>IMEI__c</columns>
        <columns>Model__c</columns>
        <columns>OS__c</columns>
        <columns>App_version__c</columns>
        <columns>LastCheckInDate__c</columns>
        <columns>Last_Check_in_By_Name__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Devices</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>IMEI__c</columns>
        <columns>Model__c</columns>
        <columns>OS__c</columns>
        <columns>App_version__c</columns>
        <columns>LastCheckInDate__c</columns>
        <columns>Last_Check_in_By_Name__c</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Inactive Devices</label>
    </listViews>
    <nameField>
        <label>Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>